@@ -472,11 +472,11 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
      }
 --- /dev/null
 +++ b/src/libgnatvsn/Makefile.in
-@@ -0,0 +1,934 @@
-+# Makefile.in generated by automake 1.16.1 from Makefile.am.
+@@ -0,0 +1,923 @@
++# Makefile.in generated by automake 1.15.1 from Makefile.am.
 +# @configure_input@
 +
-+# Copyright (C) 1994-2018 Free Software Foundation, Inc.
++# Copyright (C) 1994-2017 Free Software Foundation, Inc.
 +
 +# This Makefile.in is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -674,9 +674,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +am__v_at_1 = 
 +DEFAULT_INCLUDES = -I.@am__isrc@
 +depcomp = $(SHELL) $(top_srcdir)/../depcomp
-+am__maybe_remake_depfiles = depfiles
-+am__depfiles_remade = ./$(DEPDIR)/libgnatvsn_la-link.Plo \
-+	./$(DEPDIR)/libgnatvsn_la-version.Plo
++am__depfiles_maybe = depfiles
 +am__mv = mv -f
 +COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 +	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
@@ -833,7 +831,6 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +prefix = @prefix@
 +program_transform_name = @program_transform_name@
 +psdir = @psdir@
-+runstatedir = @runstatedir@
 +sbindir = @sbindir@
 +sharedstatedir = @sharedstatedir@
 +srcdir = @srcdir@
@@ -1005,8 +1002,8 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +	    echo ' $(SHELL) ./config.status'; \
 +	    $(SHELL) ./config.status;; \
 +	  *) \
-+	    echo ' cd $(top_builddir) && $(SHELL) ./config.status $@ $(am__maybe_remake_depfiles)'; \
-+	    cd $(top_builddir) && $(SHELL) ./config.status $@ $(am__maybe_remake_depfiles);; \
++	    echo ' cd $(top_builddir) && $(SHELL) ./config.status $@ $(am__depfiles_maybe)'; \
++	    cd $(top_builddir) && $(SHELL) ./config.status $@ $(am__depfiles_maybe);; \
 +	esac;
 +
 +$(top_builddir)/config.status: $(top_srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
@@ -1062,14 +1059,8 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +distclean-compile:
 +	-rm -f *.tab.c
 +
-+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libgnatvsn_la-link.Plo@am__quote@ # am--include-marker
-+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libgnatvsn_la-version.Plo@am__quote@ # am--include-marker
-+
-+$(am__depfiles_remade):
-+	@$(MKDIR_P) $(@D)
-+	@echo '# dummy' >$@-t && $(am__mv) $@-t $@
-+
-+am--depfiles: $(am__depfiles_remade)
++@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libgnatvsn_la-link.Plo@am__quote@
++@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libgnatvsn_la-version.Plo@am__quote@
 +
 +.c.o:
 +@am__fastdepCC_TRUE@	$(AM_V_CC)depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.o$$||'`;\
@@ -1266,8 +1257,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +distclean: distclean-am
 +	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
-+		-rm -f ./$(DEPDIR)/libgnatvsn_la-link.Plo
-+	-rm -f ./$(DEPDIR)/libgnatvsn_la-version.Plo
++	-rm -rf ./$(DEPDIR)
 +	-rm -f Makefile
 +distclean-am: clean-am distclean-compile distclean-generic \
 +	distclean-libtool distclean-tags
@@ -1315,8 +1305,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +maintainer-clean: maintainer-clean-am
 +	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
 +	-rm -rf $(top_srcdir)/autom4te.cache
-+		-rm -f ./$(DEPDIR)/libgnatvsn_la-link.Plo
-+	-rm -f ./$(DEPDIR)/libgnatvsn_la-version.Plo
++	-rm -rf ./$(DEPDIR)
 +	-rm -f Makefile
 +maintainer-clean-am: distclean-am maintainer-clean-generic
 +
@@ -1338,15 +1327,15 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +.MAKE: all check install install-am install-strip
 +
-+.PHONY: CTAGS GTAGS TAGS all all-am all-local am--depfiles am--refresh \
-+	check check-am clean clean-cscope clean-generic \
-+	clean-libLTLIBRARIES clean-libtool clean-local cscope \
-+	cscopelist-am ctags ctags-am distclean distclean-compile \
-+	distclean-generic distclean-libtool distclean-tags dvi dvi-am \
-+	html html-am info info-am install install-am install-data \
-+	install-data-am install-dvi install-dvi-am install-exec \
-+	install-exec-am install-exec-local install-gprDATA \
-+	install-html install-html-am install-info install-info-am \
++.PHONY: CTAGS GTAGS TAGS all all-am all-local am--refresh check \
++	check-am clean clean-cscope clean-generic clean-libLTLIBRARIES \
++	clean-libtool clean-local cscope cscopelist-am ctags ctags-am \
++	distclean distclean-compile distclean-generic \
++	distclean-libtool distclean-tags dvi dvi-am html html-am info \
++	info-am install install-am install-data install-data-am \
++	install-dvi install-dvi-am install-exec install-exec-am \
++	install-exec-local install-gprDATA install-html \
++	install-html-am install-info install-info-am \
 +	install-libLTLIBRARIES install-man install-pdf install-pdf-am \
 +	install-pkgadaincludeDATA install-ps install-ps-am \
 +	install-strip installcheck installcheck-am installdirs \
@@ -1409,10 +1398,10 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +.NOEXPORT:
 --- /dev/null
 +++ b/src/libgnatvsn/aclocal.m4
-@@ -0,0 +1,1184 @@
-+# generated automatically by aclocal 1.16.1 -*- Autoconf -*-
+@@ -0,0 +1,1201 @@
++# generated automatically by aclocal 1.15.1 -*- Autoconf -*-
 +
-+# Copyright (C) 1996-2018 Free Software Foundation, Inc.
++# Copyright (C) 1996-2017 Free Software Foundation, Inc.
 +
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -1432,7 +1421,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +If you have problems, you may need to regenerate the build system entirely.
 +To do so, use the procedure documented by the package, typically 'autoreconf'.])])
 +
-+# Copyright (C) 2002-2018 Free Software Foundation, Inc.
++# Copyright (C) 2002-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -1444,10 +1433,10 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +# generated from the m4 files accompanying Automake X.Y.
 +# (This private macro should not be called outside this file.)
 +AC_DEFUN([AM_AUTOMAKE_VERSION],
-+[am__api_version='1.16'
++[am__api_version='1.15'
 +dnl Some users find AM_AUTOMAKE_VERSION and mistake it for a way to
 +dnl require some minimum version.  Point them to the right macro.
-+m4_if([$1], [1.16.1], [],
++m4_if([$1], [1.15.1], [],
 +      [AC_FATAL([Do not call $0, use AM_INIT_AUTOMAKE([$1]).])])dnl
 +])
 +
@@ -1463,12 +1452,12 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +# Call AM_AUTOMAKE_VERSION and AM_AUTOMAKE_VERSION so they can be traced.
 +# This function is AC_REQUIREd by AM_INIT_AUTOMAKE.
 +AC_DEFUN([AM_SET_CURRENT_AUTOMAKE_VERSION],
-+[AM_AUTOMAKE_VERSION([1.16.1])dnl
++[AM_AUTOMAKE_VERSION([1.15.1])dnl
 +m4_ifndef([AC_AUTOCONF_VERSION],
 +  [m4_copy([m4_PACKAGE_VERSION], [AC_AUTOCONF_VERSION])])dnl
 +_AM_AUTOCONF_VERSION(m4_defn([AC_AUTOCONF_VERSION]))])
 +
-+# Copyright (C) 2011-2018 Free Software Foundation, Inc.
++# Copyright (C) 2011-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -1530,7 +1519,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +# AM_AUX_DIR_EXPAND                                         -*- Autoconf -*-
 +
-+# Copyright (C) 2001-2018 Free Software Foundation, Inc.
++# Copyright (C) 2001-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -1582,7 +1571,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +# AM_CONDITIONAL                                            -*- Autoconf -*-
 +
-+# Copyright (C) 1997-2018 Free Software Foundation, Inc.
++# Copyright (C) 1997-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -1613,7 +1602,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +Usually this means the macro was only invoked conditionally.]])
 +fi])])
 +
-+# Copyright (C) 1999-2018 Free Software Foundation, Inc.
++# Copyright (C) 1999-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -1804,11 +1793,12 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +# Generate code to set up dependency tracking.              -*- Autoconf -*-
 +
-+# Copyright (C) 1999-2018 Free Software Foundation, Inc.
++# Copyright (C) 1999-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
 +# with or without modifications, as long as this notice is preserved.
++
 +
 +# _AM_OUTPUT_DEPENDENCY_COMMANDS
 +# ------------------------------
@@ -1817,41 +1807,49 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +  # Older Autoconf quotes --file arguments for eval, but not when files
 +  # are listed without --file.  Let's play safe and only enable the eval
 +  # if we detect the quoting.
-+  # TODO: see whether this extra hack can be removed once we start
-+  # requiring Autoconf 2.70 or later.
-+  AS_CASE([$CONFIG_FILES],
-+          [*\'*], [eval set x "$CONFIG_FILES"],
-+          [*], [set x $CONFIG_FILES])
++  case $CONFIG_FILES in
++  *\'*) eval set x "$CONFIG_FILES" ;;
++  *)   set x $CONFIG_FILES ;;
++  esac
 +  shift
-+  # Used to flag and report bootstrapping failures.
-+  am_rc=0
-+  for am_mf
++  for mf
 +  do
 +    # Strip MF so we end up with the name of the file.
-+    am_mf=`AS_ECHO(["$am_mf"]) | sed -e 's/:.*$//'`
-+    # Check whether this is an Automake generated Makefile which includes
-+    # dependency-tracking related rules and includes.
-+    # Grep'ing the whole file directly is not great: AIX grep has a line
++    mf=`echo "$mf" | sed -e 's/:.*$//'`
++    # Check whether this is an Automake generated Makefile or not.
++    # We used to match only the files named 'Makefile.in', but
++    # some people rename them; so instead we look at the file content.
++    # Grep'ing the first line is not enough: some people post-process
++    # each Makefile.in and add a new line on top of each file to say so.
++    # Grep'ing the whole file is not good either: AIX grep has a line
 +    # limit of 2048, but all sed's we know have understand at least 4000.
-+    sed -n 's,^am--depfiles:.*,X,p' "$am_mf" | grep X >/dev/null 2>&1 \
-+      || continue
-+    am_dirpart=`AS_DIRNAME(["$am_mf"])`
-+    am_filepart=`AS_BASENAME(["$am_mf"])`
-+    AM_RUN_LOG([cd "$am_dirpart" \
-+      && sed -e '/# am--include-marker/d' "$am_filepart" \
-+        | $MAKE -f - am--depfiles]) || am_rc=$?
++    if sed -n 's,^#.*generated by automake.*,X,p' "$mf" | grep X >/dev/null 2>&1; then
++      dirpart=`AS_DIRNAME("$mf")`
++    else
++      continue
++    fi
++    # Extract the definition of DEPDIR, am__include, and am__quote
++    # from the Makefile without running 'make'.
++    DEPDIR=`sed -n 's/^DEPDIR = //p' < "$mf"`
++    test -z "$DEPDIR" && continue
++    am__include=`sed -n 's/^am__include = //p' < "$mf"`
++    test -z "$am__include" && continue
++    am__quote=`sed -n 's/^am__quote = //p' < "$mf"`
++    # Find all dependency output files, they are included files with
++    # $(DEPDIR) in their names.  We invoke sed twice because it is the
++    # simplest approach to changing $(DEPDIR) to its actual value in the
++    # expansion.
++    for file in `sed -n "
++      s/^$am__include $am__quote\(.*(DEPDIR).*\)$am__quote"'$/\1/p' <"$mf" | \
++	 sed -e 's/\$(DEPDIR)/'"$DEPDIR"'/g'`; do
++      # Make sure the directory exists.
++      test -f "$dirpart/$file" && continue
++      fdir=`AS_DIRNAME(["$file"])`
++      AS_MKDIR_P([$dirpart/$fdir])
++      # echo "creating $dirpart/$file"
++      echo '# dummy' > "$dirpart/$file"
++    done
 +  done
-+  if test $am_rc -ne 0; then
-+    AC_MSG_FAILURE([Something went wrong bootstrapping makefile fragments
-+    for automatic dependency tracking.  Try re-running configure with the
-+    '--disable-dependency-tracking' option to at least be able to build
-+    the package (albeit without support for automatic dependency tracking).])
-+  fi
-+  AS_UNSET([am_dirpart])
-+  AS_UNSET([am_filepart])
-+  AS_UNSET([am_mf])
-+  AS_UNSET([am_rc])
-+  rm -f conftest-deps.mk
 +}
 +])# _AM_OUTPUT_DEPENDENCY_COMMANDS
 +
@@ -1860,17 +1858,18 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +# -----------------------------
 +# This macro should only be invoked once -- use via AC_REQUIRE.
 +#
-+# This code is only required when automatic dependency tracking is enabled.
-+# This creates each '.Po' and '.Plo' makefile fragment that we'll need in
-+# order to bootstrap the dependency handling code.
++# This code is only required when automatic dependency tracking
++# is enabled.  FIXME.  This creates each '.P' file that we will
++# need in order to bootstrap the dependency handling code.
 +AC_DEFUN([AM_OUTPUT_DEPENDENCY_COMMANDS],
 +[AC_CONFIG_COMMANDS([depfiles],
 +     [test x"$AMDEP_TRUE" != x"" || _AM_OUTPUT_DEPENDENCY_COMMANDS],
-+     [AMDEP_TRUE="$AMDEP_TRUE" MAKE="${MAKE-make}"])])
++     [AMDEP_TRUE="$AMDEP_TRUE" ac_aux_dir="$ac_aux_dir"])
++])
 +
 +# Do all the work for Automake.                             -*- Autoconf -*-
 +
-+# Copyright (C) 1996-2018 Free Software Foundation, Inc.
++# Copyright (C) 1996-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -1957,8 +1956,8 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +AC_REQUIRE([AC_PROG_MKDIR_P])dnl
 +# For better backward compatibility.  To be removed once Automake 1.9.x
 +# dies out for good.  For more background, see:
-+# <https://lists.gnu.org/archive/html/automake/2012-07/msg00001.html>
-+# <https://lists.gnu.org/archive/html/automake/2012-07/msg00014.html>
++# <http://lists.gnu.org/archive/html/automake/2012-07/msg00001.html>
++# <http://lists.gnu.org/archive/html/automake/2012-07/msg00014.html>
 +AC_SUBST([mkdir_p], ['$(MKDIR_P)'])
 +# We need awk for the "check" target (and possibly the TAP driver).  The
 +# system "awk" is bad on some platforms.
@@ -2025,7 +2024,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +Aborting the configuration process, to ensure you take notice of the issue.
 +
 +You can download and install GNU coreutils to get an 'rm' implementation
-+that behaves properly: <https://www.gnu.org/software/coreutils/>.
++that behaves properly: <http://www.gnu.org/software/coreutils/>.
 +
 +If you want to complete the configuration process using your problematic
 +'rm' anyway, export the environment variable ACCEPT_INFERIOR_RM_PROGRAM
@@ -2067,7 +2066,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +done
 +echo "timestamp for $_am_arg" >`AS_DIRNAME(["$_am_arg"])`/stamp-h[]$_am_stamp_count])
 +
-+# Copyright (C) 2001-2018 Free Software Foundation, Inc.
++# Copyright (C) 2001-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -2090,7 +2089,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +# Check to see how 'make' treats includes.	            -*- Autoconf -*-
 +
-+# Copyright (C) 2001-2018 Free Software Foundation, Inc.
++# Copyright (C) 2001-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -2098,42 +2097,49 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +# AM_MAKE_INCLUDE()
 +# -----------------
-+# Check whether make has an 'include' directive that can support all
-+# the idioms we need for our automatic dependency tracking code.
++# Check to see how make treats includes.
 +AC_DEFUN([AM_MAKE_INCLUDE],
-+[AC_MSG_CHECKING([whether ${MAKE-make} supports the include directive])
-+cat > confinc.mk << 'END'
++[am_make=${MAKE-make}
++cat > confinc << 'END'
 +am__doit:
-+	@echo this is the am__doit target >confinc.out
++	@echo this is the am__doit target
 +.PHONY: am__doit
 +END
++# If we don't find an include directive, just comment out the code.
++AC_MSG_CHECKING([for style of include used by $am_make])
 +am__include="#"
 +am__quote=
-+# BSD make does it like this.
-+echo '.include "confinc.mk" # ignored' > confmf.BSD
-+# Other make implementations (GNU, Solaris 10, AIX) do it like this.
-+echo 'include confinc.mk # ignored' > confmf.GNU
-+_am_result=no
-+for s in GNU BSD; do
-+  AM_RUN_LOG([${MAKE-make} -f confmf.$s && cat confinc.out])
-+  AS_CASE([$?:`cat confinc.out 2>/dev/null`],
-+      ['0:this is the am__doit target'],
-+      [AS_CASE([$s],
-+          [BSD], [am__include='.include' am__quote='"'],
-+          [am__include='include' am__quote=''])])
-+  if test "$am__include" != "#"; then
-+    _am_result="yes ($s style)"
-+    break
-+  fi
-+done
-+rm -f confinc.* confmf.*
-+AC_MSG_RESULT([${_am_result}])
-+AC_SUBST([am__include])])
-+AC_SUBST([am__quote])])
++_am_result=none
++# First try GNU make style include.
++echo "include confinc" > confmf
++# Ignore all kinds of additional output from 'make'.
++case `$am_make -s -f confmf 2> /dev/null` in #(
++*the\ am__doit\ target*)
++  am__include=include
++  am__quote=
++  _am_result=GNU
++  ;;
++esac
++# Now try BSD make style include.
++if test "$am__include" = "#"; then
++   echo '.include "confinc"' > confmf
++   case `$am_make -s -f confmf 2> /dev/null` in #(
++   *the\ am__doit\ target*)
++     am__include=.include
++     am__quote="\""
++     _am_result=BSD
++     ;;
++   esac
++fi
++AC_SUBST([am__include])
++AC_SUBST([am__quote])
++AC_MSG_RESULT([$_am_result])
++rm -f confinc confmf
++])
 +
 +# Fake the existence of programs that GNU maintainers use.  -*- Autoconf -*-
 +
-+# Copyright (C) 1997-2018 Free Software Foundation, Inc.
++# Copyright (C) 1997-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -2172,7 +2178,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +# Helper functions for option handling.                     -*- Autoconf -*-
 +
-+# Copyright (C) 2001-2018 Free Software Foundation, Inc.
++# Copyright (C) 2001-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -2201,7 +2207,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +AC_DEFUN([_AM_IF_OPTION],
 +[m4_ifset(_AM_MANGLE_OPTION([$1]), [$2], [$3])])
 +
-+# Copyright (C) 1999-2018 Free Software Foundation, Inc.
++# Copyright (C) 1999-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -2248,7 +2254,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +# For backward compatibility.
 +AC_DEFUN_ONCE([AM_PROG_CC_C_O], [AC_REQUIRE([AC_PROG_CC])])
 +
-+# Copyright (C) 2001-2018 Free Software Foundation, Inc.
++# Copyright (C) 2001-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -2267,7 +2273,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +# Check to make sure that the build environment is sane.    -*- Autoconf -*-
 +
-+# Copyright (C) 1996-2018 Free Software Foundation, Inc.
++# Copyright (C) 1996-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -2348,7 +2354,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +rm -f conftest.file
 +])
 +
-+# Copyright (C) 2009-2018 Free Software Foundation, Inc.
++# Copyright (C) 2009-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -2408,7 +2414,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +_AM_SUBST_NOTMAKE([AM_BACKSLASH])dnl
 +])
 +
-+# Copyright (C) 2001-2018 Free Software Foundation, Inc.
++# Copyright (C) 2001-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -2436,7 +2442,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +INSTALL_STRIP_PROGRAM="\$(install_sh) -c -s"
 +AC_SUBST([INSTALL_STRIP_PROGRAM])])
 +
-+# Copyright (C) 2006-2018 Free Software Foundation, Inc.
++# Copyright (C) 2006-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
@@ -2455,7 +2461,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +# Check how to create a tarball.                            -*- Autoconf -*-
 +
-+# Copyright (C) 2004-2018 Free Software Foundation, Inc.
++# Copyright (C) 2004-2017 Free Software Foundation, Inc.
 +#
 +# This file is free software; the Free Software Foundation
 +# gives unlimited permission to copy and/or distribute it,
