@@ -2,6 +2,7 @@ gcc-9 (9.2.1-17) UNRELEASED; urgency=medium
 
   * Update gm2 from the gcc_9_2_0_gm2 branch 20191031, more parallel
     build issues.
+  * Regenerate ada-libgnatvsn.diff with automake 1.15.1 and autoconf 2.69.
 
  -- Matthias Klose <doko@debian.org>  Thu, 31 Oct 2019 19:04:40 +0100
 
